--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ cmake-build*./**
 **/\.idea
 build/**
 .vscode/ipch*
+Onethinx_Creator.cydsn/codegentemp/**
+Onethinx_Creator.cydsn/CortexM0p/**
+Onethinx_Creator.cydsn/CortexM4/**
